# slac-devices

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: tests.yml
slac_devices/: __init__.py  area.py  beampath.py  bpm.py  device.py  ict.py  lblm.py  magnet.py  pmt.py  reader.py  screen.py  tcav.py  wire.py
tests/: test_area.py  test_beampath.py  test_device.py  test_magnet.py  test_reader.py  test_screen.py  test_wire.py
